<resources>
    <string name="app_name">HUI</string>
    <string name="logo">绘</string>
    <string name="interpreter">Interpreter</string>
    <string name="alphabets">Alphabets</string>
    <string name="settings">Settings</string>
    <string name="pageName">Interpreter</string>
    <string name="display_string" />
    <string-array name="alphabets_array">
        <item>Classic</item>
        <item>Depressing</item>
        <item>Plain Boring</item>
    </string-array>
    <string-array name="bluetooth_devices_array">
        <item>none</item>
    </string-array>
</resources>